--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
+    "format:fix": "prettier . --write",
+    "format:check": "prettier . --check",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@types/node": "^24.1.0",
+    "prettier": "3.6.2",
     "typescript": "^5.9.2"
   }
 }
