--- a/package.json
+++ b/package.json
@@ -1,35 +1,42 @@
 {
-  "name": "auth-service",
-  "version": "1.0.0",
-  "description": "User management service",
-  "homepage": "https://github.com/LakshyaMittal3301/mernspace-c-auth-service#readme",
-  "bugs": {
-    "url": "https://github.com/LakshyaMittal3301/mernspace-c-auth-service/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LakshyaMittal3301/mernspace-c-auth-service.git"
-  },
-  "license": "ISC",
-  "author": "Lakshya Mittal <lakshyamittalaka@gmail.com>",
-  "type": "commonjs",
-  "main": "index.js",
-  "scripts": {
-    "start": "node src/index.js",
-    "format:check": "prettier . --check",
-    "format:fix": "prettier . --write",
-    "lint:check": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.32.0",
-    "@types/node": "^24.1.0",
-    "eslint": "^9.32.0",
-    "husky": "^9.1.7",
-    "prettier": "3.6.2",
-    "typescript": "~5.8.2",
-    "typescript-eslint": "^8.38.0"
-  }
+    "name": "auth-service",
+    "version": "1.0.0",
+    "description": "User management service",
+    "homepage": "https://github.com/LakshyaMittal3301/mernspace-c-auth-service#readme",
+    "bugs": {
+        "url": "https://github.com/LakshyaMittal3301/mernspace-c-auth-service/issues"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/LakshyaMittal3301/mernspace-c-auth-service.git"
+    },
+    "license": "ISC",
+    "author": "Lakshya Mittal <lakshyamittalaka@gmail.com>",
+    "type": "commonjs",
+    "main": "index.js",
+    "scripts": {
+        "start": "node src/index.js",
+        "format:check": "prettier . --check",
+        "format:fix": "prettier . --write",
+        "lint:check": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "prepare": "husky"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.32.0",
+        "@types/node": "^24.1.0",
+        "eslint": "^9.32.0",
+        "husky": "^9.1.7",
+        "lint-staged": "^16.1.2",
+        "prettier": "3.6.2",
+        "typescript": "~5.8.2",
+        "typescript-eslint": "^8.38.0"
+    },
+    "lint-staged": {
+        "*.ts": [
+            "npm run format:fix",
+            "npm run lint:check"
+        ]
+    }
 }
