--- a/package.json
+++ b/package.json
@@ -14,23 +14,28 @@
     "author": "Lakshya Mittal <lakshyamittalaka@gmail.com>",
     "main": "index.js",
     "scripts": {
+        "dev": "nodemon src/server.ts",
         "start": "node src/index.js",
         "format:check": "prettier . --check",
         "format:fix": "prettier . --write",
-        "lint:check": "eslint .",
-        "lint:fix": "eslint . --fix",
+        "lint:check": "eslint \"src/**/*.{ts,js}\"",
+        "lint:fix": "eslint --fix \"src/**/*.{ts,js}\"",
         "test": "echo \"Error: no test specified\" && exit 1",
         "prepare": "husky"
     },
     "devDependencies": {
-        "@eslint/js": "^9.32.0",
+        "@types/express": "^5.0.3",
         "@types/node": "^24.1.0",
-        "eslint": "^9.32.0",
+        "@typescript-eslint/eslint-plugin": "^8.38.0",
+        "@typescript-eslint/parser": "^8.38.0",
+        "eslint": "^8.57.1",
+        "eslint-config-prettier": "^10.1.8",
         "husky": "^9.1.7",
         "lint-staged": "^16.1.2",
+        "nodemon": "^3.1.10",
         "prettier": "3.6.2",
-        "typescript": "~5.8.2",
-        "typescript-eslint": "^8.38.0"
+        "ts-node": "^10.9.2",
+        "typescript": "~5.8.2"
     },
     "lint-staged": {
         "*.ts": [
@@ -39,6 +44,7 @@
         ]
     },
     "dependencies": {
-        "dotenv": "^17.2.1"
+        "dotenv": "^17.2.1",
+        "express": "^5.1.0"
     }
 }
