--- a/package.json
+++ b/package.json
@@ -18,18 +18,14 @@
         "start": "node src/index.js",
         "format:check": "prettier . --check",
         "format:fix": "prettier . --write",
-        "lint:check": "eslint \"src/**/*.{ts,js}\"",
-        "lint:fix": "eslint --fix \"src/**/*.{ts,js}\"",
         "test": "echo \"Error: no test specified\" && exit 1",
         "prepare": "husky"
     },
     "devDependencies": {
         "@types/express": "^5.0.3",
+        "@types/http-errors": "^2.0.5",
         "@types/node": "^24.1.0",
         "@types/winston": "^2.4.4",
-        "@typescript-eslint/eslint-plugin": "^8.38.0",
-        "@typescript-eslint/parser": "^8.38.0",
-        "eslint": "^8.57.1",
         "eslint-config-prettier": "^10.1.8",
         "husky": "^9.1.7",
         "lint-staged": "^16.1.2",
@@ -40,13 +36,13 @@
     },
     "lint-staged": {
         "*.ts": [
-            "npm run format:fix",
-            "npm run lint:fix"
+            "npm run format:fix"
         ]
     },
     "dependencies": {
         "dotenv": "^17.2.1",
         "express": "^5.1.0",
+        "http-errors": "^2.0.0",
         "winston": "^3.17.0"
     }
 }
