--- a/package.json
+++ b/package.json
@@ -18,19 +18,24 @@
         "start": "node src/index.js",
         "format:check": "prettier . --check",
         "format:fix": "prettier . --write",
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "prepare": "husky"
     },
     "devDependencies": {
         "@types/express": "^5.0.3",
         "@types/http-errors": "^2.0.5",
+        "@types/jest": "^30.0.0",
         "@types/node": "^24.1.0",
+        "@types/supertest": "^6.0.3",
         "@types/winston": "^2.4.4",
         "eslint-config-prettier": "^10.1.8",
         "husky": "^9.1.7",
+        "jest": "^30.0.5",
         "lint-staged": "^16.1.2",
         "nodemon": "^3.1.10",
         "prettier": "3.6.2",
+        "supertest": "^7.1.4",
+        "ts-jest": "^29.4.1",
         "ts-node": "^10.9.2",
         "typescript": "~5.8.2"
     },
