--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "author": "Lakshya Mittal <lakshyamittalaka@gmail.com>",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon src/server.ts",
-        "start": "node src/index.js",
+        "dev": "cross-env NODE_ENV=dev nodemon src/server.ts",
+        "start": "ts-node src/index.ts",
         "format:check": "prettier . --check",
         "format:fix": "prettier . --write",
         "test": "jest",
-        "prepare": "husky"
+        "prepare": "husky",
+        "typeorm": "typeorm-ts-node-commonjs"
     },
     "devDependencies": {
         "@types/express": "^5.0.3",
@@ -28,6 +29,7 @@
         "@types/node": "^24.1.0",
         "@types/supertest": "^6.0.3",
         "@types/winston": "^2.4.4",
+        "cross-env": "^10.0.0",
         "eslint-config-prettier": "^10.1.8",
         "husky": "^9.1.7",
         "jest": "^30.0.5",
@@ -48,9 +50,10 @@
         "dotenv": "^17.2.1",
         "express": "^5.1.0",
         "http-errors": "^2.0.0",
-        "pg": "^8.16.3",
+        "pg": "^8.14.1",
         "reflect-metadata": "^0.2.2",
-        "typeorm": "^0.3.25",
+        "tslib": "^2.8.1",
+        "typeorm": "0.3.25",
         "winston": "^3.17.0"
     }
 }
