--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "typeorm": "typeorm-ts-node-commonjs"
     },
     "devDependencies": {
+        "@types/bcrypt": "^6.0.0",
         "@types/express": "^5.0.3",
         "@types/http-errors": "^2.0.5",
         "@types/jest": "^30.0.0",
@@ -47,6 +48,7 @@
         ]
     },
     "dependencies": {
+        "bcrypt": "^6.0.0",
         "dotenv": "^17.2.1",
         "express": "^5.1.0",
         "http-errors": "^2.0.0",
