--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
         "start": "ts-node src/index.ts",
         "format:check": "prettier . --check",
         "format:fix": "prettier . --write",
-        "test": "jest --no-cache --coverage --all --runInBand",
+        "test": "jest  --runInBand",
         "prepare": "husky",
         "typeorm": "typeorm-ts-node-commonjs"
     },
     "devDependencies": {
         "@types/bcrypt": "^6.0.0",
+        "@types/cookie-parser": "^1.4.9",
         "@types/express": "^5.0.3",
         "@types/http-errors": "^2.0.5",
         "@types/jest": "^30.0.0",
@@ -36,6 +37,7 @@
         "husky": "^9.1.7",
         "jest": "^30.0.5",
         "lint-staged": "^16.1.2",
+        "mock-jwks": "^3.3.5",
         "nodemon": "^3.1.10",
         "prettier": "3.6.2",
         "supertest": "^7.1.4",
@@ -50,11 +52,14 @@
     },
     "dependencies": {
         "bcrypt": "^6.0.0",
+        "cookie-parser": "^1.4.7",
         "dotenv": "^17.2.1",
         "express": "^5.1.0",
+        "express-jwt": "^8.5.1",
         "express-validator": "^7.2.1",
         "http-errors": "^2.0.0",
         "jsonwebtoken": "^9.0.2",
+        "jwks-rsa": "^3.2.0",
         "pg": "^8.14.1",
         "reflect-metadata": "^0.2.2",
         "tslib": "^2.8.1",
