--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "format:fix": "prettier . --write",
         "test": "jest  --runInBand",
         "prepare": "husky",
-        "typeorm": "typeorm-ts-node-commonjs"
+        "migration:generate": "typeorm-ts-node-commonjs migration:generate",
+        "migration:create": "typeorm-ts-node-commonjs migration:create",
+        "migration:run": "typeorm-ts-node-commonjs migration:run"
     },
     "devDependencies": {
         "@types/bcrypt": "^6.0.0",
