--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "license": "ISC",
     "author": "Lakshya Mittal <lakshyamittalaka@gmail.com>",
     "main": "index.js",
+    "type": "commonjs",
     "scripts": {
         "dev": "cross-env NODE_ENV=dev nodemon src/server.ts",
-        "start": "ts-node src/index.ts",
+        "build": "tsc",
+        "start": "node dist/server.js",
         "format:check": "prettier . --check",
         "format:fix": "prettier . --write",
         "test": "jest  --runInBand",
