--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "prepare": "husky",
         "migration:generate": "typeorm-ts-node-commonjs migration:generate",
         "migration:create": "typeorm-ts-node-commonjs migration:create",
-        "migration:run": "typeorm-ts-node-commonjs migration:run"
+        "migration:run": "typeorm-ts-node-commonjs migration:run -d src/config/data-source.ts"
     },
     "devDependencies": {
         "@types/bcrypt": "^6.0.0",
