--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -82,7 +82,6 @@ jobs:
 
             # Run Sonar only where secrets are available (push on main)
             - name: SonarCloud scan
-              if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
               uses: SonarSource/sonarcloud-github-action@v2
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -94,7 +93,6 @@ jobs:
         needs: build-and-test
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
 
-        # Needs package write if you use GHCR; for Docker Hub, login via secrets is enough
         permissions:
             contents: read
 
@@ -106,36 +104,14 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v4
 
-            - name: Set up QEMU
-              uses: docker/setup-qemu-action@v3
-
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
-
             - name: Log in to Docker Hub
               uses: docker/login-action@v3
               with:
                   username: ${{ secrets.DOCKER_USERNAME }}
                   password: ${{ secrets.DOCKER_PASSWORD }}
 
-            # Optional: generate sane tags/labels automatically
-            - name: Docker meta
-              id: meta
-              uses: docker/metadata-action@v5
-              with:
-                  images: ${{ env.IMAGE_NAME }}
-                  tags: |
-                      type=raw,value=${{ env.IMAGE_TAG }}
-                      type=ref,event=branch
-                      type=sha
+            - name: Build Docker image
+              run: docker build -t ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} --platform linux/amd64 -f docker/prod/Dockerfile .
 
-            - name: Build and push
-              uses: docker/build-push-action@v6
-              with:
-                  context: .
-                  file: docker/prod/Dockerfile
-                  push: true
-                  tags: ${{ steps.meta.outputs.tags }}
-                  labels: ${{ steps.meta.outputs.labels }}
-                  cache-from: type=gha
-                  cache-to: type=gha,mode=max
+            - name: Push Docker image to Docker Hub
+              run: docker push ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
