Exclude migrations from SonarQube analysis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,7 @@ sonar.sources=src
 
 sonar.tests=tests
 
-sonar.exclusions=**/node_modules/**,**/dist/**,**/*.d.ts,**/migrations/**,**/coverage/**
+sonar.exclusions=**/node_modules/**,**/dist/**,**/*.d.ts,**/migration/**,**/coverage/**
 
 # Test settings
 sonar.tests=src
