Seed admin user

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ DB_PASSWORD=
 DB_NAME=
 REFRESH_TOKEN_SECRET=
 JWKS_URI=http://localhost:5501/.well-known/jwks.json
+
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
+ADMIN_FIRST_NAME=
+ADMIN_LAST_NAME=
